# study_django_basic_inflearn

./: .gitignore  db.sqlite3  http.http  manage.py  pyproject.toml  requirements.txt
first/: admin.py  views.py
first/templates/first/: index.html  result.html  select.html
first_django/: settings.py  urls.py  wsgi.py
multiprocess_test/: redis_conf.py  rq_main.py  rq_task.py  rq_worker.py  rq_worker_p.py
myapp/: admin.py  models.py  pagination.py  serializers.py  tests.py  token_views.py  urls.py  views.py
myapp/migrations/: 0001_initial.py  0002_alter_book_publication_date.py  0003_alter_book_publication_date.py
rq_test/: apps.py  async.py  django-rq_main.py  drq_main.py  drq_worker.py  redis_conf.py  rq_main.py  rq_task.py  rq_worker.py  rq_worker_p.py  sync.py  urls.py  views.py
second/: forms.py  models.py  urls.py  views.py
second/migrations/: 0001_initial.py  0002_alter_post_id.py
second/templates/second/: create.html  list.html
third/: forms.py  models.py  urls.py  views.py
third/migrations/: 0001_initial.py  0002_restaurant_image_restaurant_password_and_more.py
third/templates/third/: base.html  create.html  delete.html  detail.html  list.html  restaurant_list.html  review_create.html  review_list.html  update.html
third/views/: __init__.py  base_views.py  restaurant_views.py  review_views.py
